--- a/website/src/index.css
+++ b/website/src/index.css
@@ -155,6 +155,6 @@ code {
   font-family: 'Roboto', sans-serif; /* This line applies the Roboto font */
   display: flex;
   justify-content: center;
-  margin-top: 7rem;
-  margin-bottom: 20rem;
+  margin-top: 2rem;
+  margin-bottom: 0.2rem;
 }
